--- a/style.css
+++ b/style.css
@@ -11,6 +11,11 @@
   background-color: inherit;
 }
 
+body {
+  display: flex;
+  flex-direction: column;
+}
+
 h1 {
   font-size: 60px;
   font-weight: 800;
@@ -30,7 +35,8 @@ p {
 #header {
   display: grid;
   grid-template-columns: 1fr;
-  margin: 1rem 2rem 5rem 2rem;
+  margin: 1rem 2rem;
+  padding-bottom: 5rem;
 }
 
 #header p {
@@ -40,14 +46,13 @@ p {
 .article {
   display: grid;
   grid-template-columns: 1fr 3fr 1fr;
-  margin: 1rem 2rem;
+  margin: auto 2rem 1rem 2rem;
 }
 
 .about {
   grid-column: 2;
   display: grid;
   grid-template-columns: 1fr 2fr;
-  margin: 5px;
 }
 
 .about-text  {
@@ -77,8 +82,24 @@ p {
 
 .sidebar {
   display: flex;
+  padding: 1rem;
   flex-direction: column;
+  border: 2px solid black;
   grid-column: 3;
   position: sticky;
   margin: 0px auto;
+}
+
+#footer {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  margin: auto 2rem 1rem 2rem;
+}
+
+.credit {
+  grid-column: 2;
+  display: flex;
+  padding: 1rem;
+  align-items: center;
+  justify-content: center;
 }
