--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+:root {
+  --background-color: #151515;
+  --font: #FFFFFF;
+  --font-alt: #8AC6D0;
+  --neutral: #63768D;
+  --highlight: #A63D40;
+}
+
 * {
   margin: 0px;
   padding: 0px; 
@@ -14,6 +22,8 @@
 body {
   display: flex;
   flex-direction: column;
+  background-color: var(--background-color);
+  color: var(--font);
 }
 
 h1 {
@@ -26,10 +36,21 @@ h2 {
   font-weight: 600;
 }
 
+h3 {
+  font-size: 20px;
+  font-weight: 600;
+}
+
 p {
+  font-size: 18px;
   line-height: 1.5;
   overflow-wrap: break-word;
   text-wrap: pretty;
+}
+
+.fade {
+  color: var(--font-alt);
+  margin-bottom: 1rem;
 }
 
 #header {
@@ -80,11 +101,36 @@ p {
   margin: 25px;
 }
 
+#experience {
+  grid-column: 2;
+  margin-top: 5rem;
+}
+.experience {
+  grid-column: 2;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 50%;
+  margin: 1rem;
+  padding: 1rem;
+  border: 2px solid var(--neutral);
+  border-radius: 5px;
+}
+
+.row {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
 .sidebar {
   display: flex;
   padding: 1rem;
   flex-direction: column;
-  border: 2px solid black;
+  border: 2px solid var(--neutral);
   grid-column: 3;
   position: sticky;
   margin: 0px auto;
