--- a/style.css
+++ b/style.css
@@ -56,8 +56,9 @@ p {
 #header {
   display: grid;
   grid-template-columns: 1fr;
-  margin: 1rem 2rem;
-  padding-bottom: 5rem;
+  padding: 2rem;
+  position: sticky;
+  top: 0;
 }
 
 #header p {
@@ -67,7 +68,7 @@ p {
 .article {
   display: grid;
   grid-template-columns: 1fr 3fr 1fr;
-  margin: auto 2rem 1rem 2rem;
+  margin: 5rem 2rem 1rem 2rem;
 }
 
 .about {
@@ -133,6 +134,7 @@ p {
   border: 2px solid var(--neutral);
   grid-column: 3;
   position: sticky;
+  top: 10rem;
   margin: 0px auto;
 }
 
