--- a/style.css
+++ b/style.css
@@ -59,6 +59,8 @@ p {
   padding: 2rem;
   position: sticky;
   top: 0;
+  backdrop-filter: blur(50px);
+  background-color: transparent;
 }
 
 #header p {
@@ -134,7 +136,7 @@ p {
   border: 2px solid var(--neutral);
   grid-column: 3;
   position: sticky;
-  top: 10rem;
+  top: 11rem;
   margin: 0px auto;
 }
 
