--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ p {
 .article {
   display: grid;
   grid-template-columns: 1fr 3fr 1fr;
-  margin: 5rem 2rem 1rem 2rem;
+  margin: 5rem 2rem;
 }
 
 .about {
@@ -149,7 +149,25 @@ p {
 .credit {
   grid-column: 2;
   display: flex;
+  flex-direction: column;
   padding: 1rem;
   align-items: center;
   justify-content: center;
+}
+
+.icon {
+  margin: 1rem;
+  width: 2rem;
+  height: auto;
+}
+
+.contact {
+  grid-column: 3;
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+}
+
+.socials {
+  display: flex;
 }
