--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
 :root {
   --background-color: #151515;
-  --font: #FFFFFF;
-  --font-alt: #8AC6D0;
-  --neutral: #63768D;
-  --highlight: #A63D40;
+  --background-light: #0B141D;
+  --white: #FFFFFF;
+  --font: #FCEFEF;
+  --font-alt: #D3C1C3;
+  --neutral: #3C6997;
+  --highlight: #8AC6D0;
+  --highlight-two: #F8DDDD;
 }
 
 * {
@@ -34,11 +37,13 @@ h1 {
 h2 {
   font-size: 30px;
   font-weight: 600;
+  color: var(--highlight);
 }
 
 h3 {
   font-size: 20px;
   font-weight: 600;
+  color: var(--white);
 }
 
 p {
@@ -58,6 +63,7 @@ em {
 }
 
 #header {
+  color: var(--highlight);
   display: grid;
   grid-template-columns: 1fr;
   padding: 2rem;
@@ -70,6 +76,7 @@ em {
 #header p {
   padding-left: 2rem;
   padding-right: 2rem;
+  color: var(--highlight-two);
 }
 
 .titles {
@@ -135,6 +142,7 @@ em {
 }
 
 .card {
+  background-color: var(--background-light);
   display: flex;
   flex-direction: column;
   flex-basis: 50%;
