--- a/style.css
+++ b/style.css
@@ -192,6 +192,15 @@ br {
   margin: auto 2rem 1rem 2rem;
 }
 
+.license {
+  grid-column: 1;
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  align-items: center;
+  justify-content: center;
+}
+
 .credit {
   grid-column: 2;
   display: flex;
@@ -201,6 +210,7 @@ br {
   justify-content: center;
 }
 
+.license a,
 .icon {
   margin: 1rem;
   height: 2rem;
@@ -212,6 +222,7 @@ br {
   display: flex;
   flex-direction: column;
   padding: 1rem;
+  align-items: center;
 }
 
 .socials {
