Added rudimentary formatting for small screens.
This commit brings this page up to a point where it could be made
available to the public.

--- a/style.css
+++ b/style.css
@@ -261,3 +261,24 @@ br {
 .cv-section h3 {
   color: var(--background-color);
 }
+
+@media (max-width: 1250px) {
+
+  #header, .article {
+    grid-template-columns: 1fr;
+  }
+
+  #header p {
+    display: none;
+  }
+
+  #footer, #header, #about, #experience, #education, #miscellaneous, #section-title, .paper {
+    grid-column: 1;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .sidebar {
+    display: none;
+  }
+}
