--- a/style.css
+++ b/style.css
@@ -272,13 +272,33 @@ br {
     display: none;
   }
 
-  #footer, #header, #about, #experience, #education, #miscellaneous, #section-title, .paper {
+  #footer, #header, #about, #experience, #education, #miscellaneous, #section-title {
     grid-column: 1;
     display: flex;
     flex-direction: column;
   }
+ 
+  .paper, .sidebar {
+    grid-column: 1;
+    display: flex;
+    flex-direction: column;
+    position: static;
+  }
+
+  .paper {
+    padding: 1rem;
+  }
 
   .sidebar {
-    display: none;
+    margin: 2rem auto;
+    border: 2px solid var(--highlight-two);
+    border-radius: 5px;
+    padding: 1rem;
+  }
+
+  .cv-head {
+    grid-column: 1;
+    display: flex;
+    flex-direction: column;
   }
 }
