Added thesis content
Just a start. Needs formatting yet

--- a/style.css
+++ b/style.css
@@ -262,6 +262,13 @@ br {
   color: var(--background-color);
 }
 
+#thesis {
+  display: flex;
+  flex-direction: column;
+  grid-column: 2;
+  text-align: justify;
+}
+
 @media (max-width: 1250px) {
 
   #header, .article {
