--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ br {
   scroll-margin-top: 216px;
 }
 
-.about-text  {
+#thesis p, .about-text  {
   display: flex;
   flex-direction: column;
   grid-column: 2;
@@ -175,6 +175,7 @@ br {
   position: sticky;
   top: 11rem;
   margin: 0px auto;
+  padding: 1rem;
 }
 
 .sidebar a {
@@ -266,7 +267,6 @@ br {
   display: flex;
   flex-direction: column;
   grid-column: 2;
-  text-align: justify;
 }
 
 @media (max-width: 1250px) {
@@ -279,10 +279,14 @@ br {
     display: none;
   }
 
-  #footer, #header, #about, #experience, #education, #miscellaneous, #section-title {
+  #thesis, #footer, #header, #about, #experience, #education, #miscellaneous, #section-title {
     grid-column: 1;
     display: flex;
     flex-direction: column;
+  }
+
+  #thesis h1 {
+    font-size: 2rem;
   }
  
   .paper, .sidebar {
