--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
 }
 
 h1 {
-  font-size: 60px;
+  font-size: 3rem;
   font-weight: 800;
 }
 
@@ -176,6 +176,8 @@ br {
   top: 11rem;
   margin: 0px auto;
   padding: 1rem;
+  background-color: transparent;
+  grid-row: 1;
 }
 
 .sidebar a {
@@ -267,6 +269,14 @@ br {
   display: flex;
   flex-direction: column;
   grid-column: 2;
+  grid-row: 1;
+}
+
+#thesis h1, #subtitle, #thesis-credit {
+  display: flex;
+  text-align: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 @media (max-width: 1250px) {
