--- a/style.css
+++ b/style.css
@@ -23,8 +23,6 @@
 }
 
 body {
-  display: flex;
-  flex-direction: column;
   background-color: var(--background-color);
   color: var(--font);
 }
@@ -59,6 +57,11 @@ em {
 
 br {
   margin: 2rem;
+}
+
+.viewport {
+  display: flex;
+  flex-direction: column;
 }
 
 .fade {
@@ -172,6 +175,7 @@ br {
   display: flex;
   flex-direction: column;
   grid-column: 3;
+  align-self: start;
   position: sticky;
   top: 11rem;
   margin: 0px auto;
@@ -191,8 +195,8 @@ br {
 
 #footer {
   display: grid;
+  justify-content: flex-end;
   grid-template-columns: 1fr 1fr 1fr;
-  margin: auto 2rem 1rem 2rem;
 }
 
 .license {
