--- a/style.css
+++ b/style.css
@@ -33,15 +33,20 @@ h1 {
 }
 
 h2 {
-  font-size: 30px;
+  font-size: 2rem;
   font-weight: 600;
   color: var(--highlight);
 }
 
 h3 {
-  font-size: 20px;
+  font-size: 1.5rem;
   font-weight: 600;
   color: var(--white);
+}
+
+h4 {
+  font-size: 1.25rem;
+  font-weight: 600;
 }
 
 p {
@@ -49,6 +54,7 @@ p {
   line-height: 1.5;
   overflow-wrap: break-word;
   text-wrap: pretty;
+  margin: 10px 0px;
 }
 
 em {
@@ -113,10 +119,6 @@ br {
   flex-direction: column;
   grid-column: 2;
   text-align: justify;
-}
-
-.about-text p {
-  margin-top: 10px;
 }
 
 .profile {
@@ -281,6 +283,28 @@ br {
   text-align: center;
   flex-direction: column;
   align-items: center;
+  margin: 3rem auto;
+}
+
+#thesis h1, #thesis h2, #thesis h3, #thesis h4 {
+  color: var(--font);
+}
+
+#subtitle p {
+  margin: 0px;
+}
+
+#thesis h2 {
+  margin-top: 2rem;
+}
+
+.hanging {
+  padding-left: 0.5in;
+  text-indent: -0.5in;
+}
+
+.hanging p {
+  margin: 2rem 0px;
 }
 
 @media (max-width: 1250px) {
