--- a/style.css
+++ b/style.css
@@ -82,6 +82,7 @@ br {
   padding: 2rem;
   position: sticky;
   top: 0;
+  z-index: 5;
   backdrop-filter: blur(50px);
   background-color: transparent;
 }
