--- a/style.css
+++ b/style.css
@@ -82,6 +82,10 @@ a {
   color: var(--text);
 }
 
+.shadow {
+  box-shadow: 0px 8px 12px black;
+}
+
 .viewport {
   display: flex;
   flex-direction: column;
@@ -99,7 +103,6 @@ a {
   align-items: center;
   justify-content: space-evenly;
   padding: 8px 64px;
-  box-shadow: 0px 8px 12px black;
   margin-bottom: 64px;
   position: sticky;
   top: 0;
