--- a/style.css
+++ b/style.css
@@ -98,6 +98,8 @@ a {
 
 #header {
   color: var(--titles);
+  background-image: linear-gradient(180deg, var(--bg-light) 0%, var(--bg-dark) 90%);
+  background-color: transparent;
   display: grid;
   grid-template-columns: 1fr 4fr;
   align-items: center;
@@ -107,6 +109,7 @@ a {
   position: sticky;
   top: 0;
   z-index: 5;
+  border-bottom: 0px solid var(--shadow);
 }
 
 #header a {
@@ -169,7 +172,6 @@ a {
   border-radius: 50%;
   border: 2px solid var(--secondary);
   margin: 25px;
-  box-shadow: 0px 8px 12px black;
 }
 
 #section-title {
