--- a/style.css
+++ b/style.css
@@ -104,7 +104,6 @@ a {
   align-items: center;
   justify-content: space-evenly;
   padding: 8px 16px;
-  margin-bottom: 64px;
   position: sticky;
   top: 0;
   z-index: 5;
@@ -345,16 +344,20 @@ a {
   grid-column: 2;
 }
 
-#thesis h1, #subtitle, #subtitle p {
+#thesis h1, #titlePage, #titlePage p, #titlePage div {
   display: flex;
   text-align: center;
   flex-direction: column;
   align-items: center;
-  margin: 3rem auto;
 }
 
-#subtitle p {
+#titlePage p {
   margin: 0px;
+}
+
+#titlePage {
+  height: 95vh;
+  justify-content: space-evenly;
 }
 
 #thesis h2 {
@@ -370,6 +373,10 @@ a {
 
 #thesis p, #thesis span {
   display: inline;
+}
+
+.hidden {
+  display: none;
 }
 
 @media (max-width: 1250px) {
@@ -393,7 +400,7 @@ a {
     position: static;
   }
 
-  #thesis, #subtitle, #footer, #header, #about, #experience, #education, #miscellaneous, #section-title {
+  #thesis, #titlePage, #footer, #header, #about, #experience, #education, #miscellaneous, #section-title {
     grid-column: 1;
     display: flex;
     flex-direction: column;
