--- a/style.css
+++ b/style.css
@@ -199,7 +199,8 @@ a {
 }
 
 .card {
-  background-color: var(--bg-light);
+  background-color: transparent;
+  background-image: linear-gradient(180deg, var(--bg-light) 20%, var(--bg-dark) 100%);
   display: flex;
   flex-direction: column;
   flex-basis: 50%;
@@ -266,6 +267,7 @@ a {
   justify-content: flex-end;
   grid-template-columns: 1fr 1fr 1fr;
   font-size: 14px;
+  margin-top: 64px;
 }
 
 .license {
