Added iframes to show portfolio.
I don't love this solution. I'd like it better if I could just make an
icon that represents the site and go with that alongside a little
description. This will work for now, but is certainly not permanent.

--- a/style.css
+++ b/style.css
@@ -400,6 +400,21 @@ li {
   flex-wrap: wrap;
 }
 
+.card iframe {
+  height: 400px;
+  width: 350px;
+  border-radius: 12px;
+  border: 1px solid var(--text);
+  margin-top: 12px;
+}
+
+.card div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 @media (max-width: 1250px) {
 
   #header, .article {
