--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ ol {
 }
 
 li {
-  padding: 1rem 0px;
+  padding: 4px 0px;
 }
 
 .shadow {
@@ -136,7 +136,6 @@ li {
 .article {
   display: grid;
   grid-template-columns: 1fr 3fr 1fr;
-  margin: 0 16px;
 }
 
 .article p {
@@ -214,34 +213,34 @@ li {
   max-height: none;
 }
 
-.sidebar, .footnotes {
-  flex-direction: column;
-  align-self: start;
-  position: sticky;
-  top: 11rem;
-  margin: 0px auto;
-  padding: 1rem;
-  background-color: transparent;
-  grid-row: 1;
-}
-
-.sidebar {
+.close {
   display: flex;
-  grid-column: 3;
+  justify-content: center;
+  margin-left: auto;
+  position: sticky;
+  top: 0;
+  flex-shrink: 0;
+  font-size: 12px;
 }
 
 .footnotes {
   display: flex;
-  border: solid 2px var(--secondary);
-  border-radius: 10px;
-  margin: 1rem;
-  grid-column: 1;
-  height: 75vh;
+  flex-direction: row;
+  max-height: 128px;
+  position: sticky;
+  bottom: 0;
+  margin: 0px auto;
+  padding: 8px 128px;
+  background-color: var(--bg-light);
+  border-top: solid 2px var(--primary);
+  margin: 0;
+  grid-column: 1 / 4;
   overflow: auto;
 }
 
 .footnotes ol {
   font-size: 95%;
+  grid-column: 2;
 }
 
 .marker {
@@ -249,11 +248,6 @@ li {
   text-decoration: underline;
   vertical-align: super;
   color: var(--text-muted);
-}
-
-.sidebar a {
-  padding: 5px;
-  text-decoration: none;
 }
 
 .navigation a:hover {
@@ -291,6 +285,12 @@ li {
   margin: 1rem;
   height: 2rem;
   width: auto;
+}
+
+.close .icon {
+  height: 24px;
+  width: auto;
+  color: var(--danger);
 }
 
 .contact {
@@ -436,10 +436,9 @@ li {
     display: none;
   }
  
-  .paper, .sidebar, .footnotes {
+  .footnotes {
     grid-column: 1;
     display: flex;
-    flex-direction: column;
     position: static;
   }
 
@@ -447,6 +446,7 @@ li {
     grid-column: 1;
     display: flex;
     flex-direction: column;
+    padding: 8px;
   }
 
   #thesis h1 {
@@ -454,14 +454,6 @@ li {
   }
 
   .paper {
-    padding: 1rem;
-  }
-
-  .sidebar, .footnotes {
-    display: none;
-    margin: 2rem auto;
-    border: 2px solid var(--secondary);
-    border-radius: 5px;
     padding: 1rem;
   }
 
