Support for mobile footnotes; close now clears all
This makes clicking through footnotes more intuitive and allows for
mobile users to see footnotes as well. Footnotes will still toggle when
clicked twice, but the footnote footer will reset on the "red x" close

--- a/style.css
+++ b/style.css
@@ -436,9 +436,8 @@ li {
   }
  
   .footnotes {
-    grid-column: 1;
-    display: none;
-    position: static;
+    max-height: 75vh;
+    padding: 8px;
   }
 
   .portfolio, #thesis, #titlePage, #footer, #header, #about, #experience, #education, #miscellaneous, #section-title {
