Changed max height of footnote footer
Since closing it clears it, this makes reading multiple open footnotes
at a time.

--- a/style.css
+++ b/style.css
@@ -226,7 +226,7 @@ li {
 .footnotes {
   display: flex;
   flex-direction: row;
-  max-height: 128px;
+  max-height: 25vh;
   position: sticky;
   bottom: 0;
   margin: 0px auto;
